--- a/theme/xylight.css
+++ b/theme/xylight.css
@@ -1,7 +1,8 @@
 @include-when-export url('https://fonts.googleapis.com/css?family=Inconsolata:400,700|Roboto:300,300i,400,400i,700,700i&subset=latin-ext');
 
 :root {
-  --accent-color: #aeb1b5; /* #'s before H1-3 */
+  --accent-color: #aeb1b5;
+  --dark-accent-color: #787a7c; /* #'s before H1-3 */
   --background-color: white;
   --border-color: #ddd; 
   --code-bg-color: #f8f8f8; 
@@ -10,12 +11,13 @@
   --link-color: #2077b2;
   --control-text-color: #667176;
   --side-bar-bg-color: #fafafa;
-  --body-font: Roboto, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --body-font: "Fira Code", "Fira Mono", "Source Code Pro", Courier, monospace;
+  --header-font: "Fira Sans", "Roboto", "Source Sans Pro", sans-serif;
   --border-radius: 2px;
   --document-horizontal-margin: 80px;
   --document-padding-x: 10ch;
   --font-size: 16px;
-  --h1-fontsize: 1.5rem;   /* 1,5   rem = 24px */
+  --h1-fontsize: 2rem;   /* 1,5   rem = 24px */
   --h2-fontsize: 1.375rem; /* 1,375 rem = 22px */
   --h3-fontsize: 1.25rem;  /* 1,25  rem = 20px */
   --h4-fontsize: 1.125rem; /* 1,125 rem = 18px */
@@ -23,7 +25,7 @@
   --main-content-margin: 0 auto;
   --main-content-max-width: 100ch;
   --monospace-font-size: 15px;
-  --monospace-font: Inconsolata, Consolas, Menlo, "Liberation Mono", Courier, monospace;
+  --monospace-font: "Fira Code", "Fira Mono", "Source Code Pro", Courier, monospace;
   --monospace-line-height: 1.4;
   --monospace: var(--monospace-font); /* Fixes source code mode */
   --nav-width: 200px;
@@ -31,58 +33,40 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Fira Code';
   font-style: normal;
   font-weight: normal;
-  src: local('Roboto'), local('Roboto-Regular'), url('./xydark/Roboto-Regular.ttf') format('truetype')
+  src: local('Fira Code'), local('FiraCode-Regular'), url('./xydark/FiraCode-Regular.ttf') format('truetype')
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: normal;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url('./xydark/Roboto-Italic.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'Roboto';
+  font-family: 'Fira Code';
   font-style: normal;
   font-weight: bold;
-  src: local('Roboto Bold'), local('Roboto-Bold'), url('./xydark/Roboto-Bold.ttf') format('truetype')
+  src: local('Fira Code Bold'), local('FiraCode-Bold'), url('./xydark/FiraCode-Bold.ttf') format('truetype')
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: bold;
-  src: local('Roboto BoldItalic'), local('Roboto-BoldItalic'), url('./xydark/Roboto-BoldItalic.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'Roboto';
+  font-family: 'Fira Code';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url('./xydark/Roboto-Light.ttf') format('truetype')
+  src: local('Fira Code Light'), local('FiraCode-Light'), url('./xydark/FiraCode-Light.ttf') format('truetype')
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 300;
-  src: local('Roboto LightItalic'), local('Roboto-LightItalic'), url('./xydark/Roboto-LightItalic.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'Inconsolata';
-  font-weight: Normal;
-  src: local('Inconsolata'), local('Inconsolata-Regular'), url('./xydark/Inconsolata-Regular.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'Inconsolata';
+  font-family: 'Fira Sans';
+  font-style: normal;
   font-weight: bold;
-  src: local('Inconsolata Bold'), local('Inconsolata-Bold'), url('./xydark/Inconsolata-Bold.ttf') format('truetype')
+  src: local('Fira Sans ExtraBold'), local('FiraSans-ExtraBold'), url('./xydark/FiraSans-ExtraBold.ttf') format('truetype')
 }
+
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: italic;
+  font-weight: bold;
+  src: local('Fira Sans ExtraBoldItalic'), local('FiraSans-ExtraBoldItalic'), url('./xydark/FiraSans-ExtraBoldItalic.ttf') format('truetype')
+}
+
 
 /* Narrow layout styles */
 @media (max-width: 640px) {
@@ -126,8 +110,9 @@ pre.md-meta-block {
 }
 
 /* headings */
-h1, h2, h3 {
-  font-weight: 300;
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--header-font);
+  font-weight: bold;
   color: var(--header-color);  
 }
 
@@ -168,6 +153,7 @@ h6 {
   color: var(--control-text-color);	
 }
 
+/*  We do not need this crap. This will be removed eventually
 h1::before,
 h2::before,
 h3::before {
@@ -176,7 +162,7 @@ h3::before {
   width: 5ch;
   padding-right: 1ch;
   margin-left: -5ch;
-  color: var(--accent-color);
+  color: var(--dark-accent-color);
   display: inline-block;
 }
 
@@ -190,7 +176,7 @@ h2::before {
 
 h3::before {
   content: '###';
-}
+} */
 
 h1 tt,
 h1 code {
@@ -348,6 +334,7 @@ tt {
 
 a {
   color:  var(--link-color);
+  text-decoration: none;
 }
 
 
